[gd_scene load_steps=119 format=3 uid="uid://e3wfpps15v1g"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0wl42"]
[ext_resource type="Texture2D" uid="uid://do8eioor7hftx" path="res://Sprites/Aim_Down_Left.png" id="2_mthtx"]
[ext_resource type="Texture2D" uid="uid://dw7uiw2m57wf7" path="res://Sprites/Morph_ball.png" id="3_061ch"]
[ext_resource type="Texture2D" uid="uid://dixj27cg4fusq" path="res://Sprites/RL.png" id="3_k81b7"]
[ext_resource type="Texture2D" uid="uid://t7ofe137qovt" path="res://Sprites/Aim_Down_Right.png" id="3_qy2lw"]
[ext_resource type="Texture2D" uid="uid://d0vtom0dl7v1y" path="res://Sprites/Aim_up_Left.png" id="4_2jrwa"]
[ext_resource type="Texture2D" uid="uid://ojwgefelhs38" path="res://Sprites/RR.png" id="4_mt6fh"]
[ext_resource type="Texture2D" uid="uid://d2m7bvtuij8yo" path="res://Sprites/Aim_up_Right.png" id="5_0g38x"]
[ext_resource type="Texture2D" uid="uid://ss6ivydhohag" path="res://Sprites/JL_complete.png" id="5_km4r2"]
[ext_resource type="Texture2D" uid="uid://db52obgjfxc2k" path="res://Sprites/JR_complete.png" id="6_l753o"]
[ext_resource type="Texture2D" uid="uid://cpo8ip6yhq4g4" path="res://Sprites/CL.png" id="6_v7m7i"]
[ext_resource type="Texture2D" uid="uid://djl3f441kv005" path="res://Sprites/CR.png" id="7_7h5eb"]
[ext_resource type="Texture2D" uid="uid://xmlqlufiq37s" path="res://Sprites/Idle_Front.png" id="7_ykmam"]
[ext_resource type="Texture2D" uid="uid://bo5qrj6yfqb5h" path="res://Sprites/Idle_Left.png" id="8_5eyu2"]
[ext_resource type="Texture2D" uid="uid://biuoj5gbrtsvq" path="res://Sprites/Idle_Right.png" id="9_sjxc7"]
[ext_resource type="Texture2D" uid="uid://b0b0hol56pa85" path="res://Sprites/RL_Aim_down.png" id="12_l4jeu"]
[ext_resource type="Texture2D" uid="uid://3vgskuk8g8rg" path="res://Sprites/RL_Aim_up.png" id="13_crwaw"]
[ext_resource type="Texture2D" uid="uid://b34snt2yywsyi" path="res://Sprites/RR_Aim_down.png" id="14_hsquv"]
[ext_resource type="Texture2D" uid="uid://ek35huu10s21" path="res://Sprites/RR_Aim_up.png" id="15_gjp88"]
[ext_resource type="PackedScene" uid="uid://7b62iyfr32nu" path="res://scenes/hud.tscn" id="20_rilml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4f1cm"]
size = Vector2(14, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo2mc"]
atlas = ExtResource("2_mthtx")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbutl"]
atlas = ExtResource("3_qy2lw")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq50y"]
atlas = ExtResource("6_v7m7i")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tif4r"]
atlas = ExtResource("7_7h5eb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycb46"]
atlas = ExtResource("8_5eyu2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwwpr"]
atlas = ExtResource("9_sjxc7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4476i"]
atlas = ExtResource("7_ykmam")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vkel"]
atlas = ExtResource("3_061ch")
region = Rect2(24, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdid2"]
atlas = ExtResource("3_061ch")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnrfb"]
atlas = ExtResource("3_061ch")
region = Rect2(72, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv1rj"]
atlas = ExtResource("3_061ch")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_as6ql"]
atlas = ExtResource("3_061ch")
region = Rect2(120, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvcfc"]
atlas = ExtResource("3_061ch")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg3pe"]
atlas = ExtResource("12_l4jeu")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebdn7"]
atlas = ExtResource("12_l4jeu")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gscsa"]
atlas = ExtResource("12_l4jeu")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3lvx"]
atlas = ExtResource("12_l4jeu")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_71kse"]
atlas = ExtResource("12_l4jeu")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gims2"]
atlas = ExtResource("12_l4jeu")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b0h5"]
atlas = ExtResource("12_l4jeu")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcsyk"]
atlas = ExtResource("12_l4jeu")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhy6c"]
atlas = ExtResource("12_l4jeu")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbam7"]
atlas = ExtResource("12_l4jeu")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eniv"]
atlas = ExtResource("13_crwaw")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjnur"]
atlas = ExtResource("13_crwaw")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe1xt"]
atlas = ExtResource("13_crwaw")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_koe6m"]
atlas = ExtResource("13_crwaw")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qnx"]
atlas = ExtResource("13_crwaw")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayvcg"]
atlas = ExtResource("13_crwaw")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5o2o"]
atlas = ExtResource("13_crwaw")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1asq"]
atlas = ExtResource("13_crwaw")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_immqq"]
atlas = ExtResource("13_crwaw")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnpp2"]
atlas = ExtResource("13_crwaw")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk2g5"]
atlas = ExtResource("14_hsquv")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri0vx"]
atlas = ExtResource("14_hsquv")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1mhc"]
atlas = ExtResource("14_hsquv")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeob8"]
atlas = ExtResource("14_hsquv")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnxg6"]
atlas = ExtResource("14_hsquv")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pnb5"]
atlas = ExtResource("14_hsquv")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7n4e"]
atlas = ExtResource("14_hsquv")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khn3s"]
atlas = ExtResource("14_hsquv")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkf5x"]
atlas = ExtResource("14_hsquv")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0u56"]
atlas = ExtResource("14_hsquv")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31hds"]
atlas = ExtResource("15_gjp88")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwfi2"]
atlas = ExtResource("15_gjp88")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj5n1"]
atlas = ExtResource("15_gjp88")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyarl"]
atlas = ExtResource("15_gjp88")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3cpl"]
atlas = ExtResource("15_gjp88")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w31a"]
atlas = ExtResource("15_gjp88")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5wvs"]
atlas = ExtResource("15_gjp88")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmqu"]
atlas = ExtResource("15_gjp88")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_67fxk"]
atlas = ExtResource("15_gjp88")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_calca"]
atlas = ExtResource("15_gjp88")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dul5"]
atlas = ExtResource("3_k81b7")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eag0b"]
atlas = ExtResource("3_k81b7")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7toqd"]
atlas = ExtResource("3_k81b7")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_atj1k"]
atlas = ExtResource("3_k81b7")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo2kc"]
atlas = ExtResource("3_k81b7")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_22la4"]
atlas = ExtResource("3_k81b7")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1n6r"]
atlas = ExtResource("3_k81b7")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia4cj"]
atlas = ExtResource("3_k81b7")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4weg"]
atlas = ExtResource("3_k81b7")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1aw0"]
atlas = ExtResource("3_k81b7")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwnus"]
atlas = ExtResource("4_mt6fh")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_um8gb"]
atlas = ExtResource("4_mt6fh")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsdlp"]
atlas = ExtResource("4_mt6fh")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bdj7"]
atlas = ExtResource("4_mt6fh")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqhbu"]
atlas = ExtResource("4_mt6fh")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5s8s"]
atlas = ExtResource("4_mt6fh")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h048"]
atlas = ExtResource("4_mt6fh")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmg72"]
atlas = ExtResource("4_mt6fh")
region = Rect2(280, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi17r"]
atlas = ExtResource("4_mt6fh")
region = Rect2(320, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvex7"]
atlas = ExtResource("4_mt6fh")
region = Rect2(360, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhccg"]
atlas = ExtResource("5_km4r2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb5u3"]
atlas = ExtResource("5_km4r2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1slsw"]
atlas = ExtResource("5_km4r2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qvoe"]
atlas = ExtResource("5_km4r2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy7fq"]
atlas = ExtResource("5_km4r2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvlub"]
atlas = ExtResource("5_km4r2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_quiwm"]
atlas = ExtResource("5_km4r2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2vs5"]
atlas = ExtResource("5_km4r2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvlg5"]
atlas = ExtResource("5_km4r2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86343"]
atlas = ExtResource("5_km4r2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_waetl"]
atlas = ExtResource("6_l753o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0m57"]
atlas = ExtResource("6_l753o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_238sa"]
atlas = ExtResource("6_l753o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxfje"]
atlas = ExtResource("6_l753o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2r6b"]
atlas = ExtResource("6_l753o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad2fr"]
atlas = ExtResource("6_l753o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q8x0"]
atlas = ExtResource("6_l753o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot8y3"]
atlas = ExtResource("6_l753o")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oblhg"]
atlas = ExtResource("6_l753o")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyaa2"]
atlas = ExtResource("6_l753o")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r81r6"]
atlas = ExtResource("7_ykmam")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_w6h4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo2mc")
}],
"loop": true,
"name": &"Aim_Down_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbutl")
}],
"loop": true,
"name": &"Aim_Down_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2jrwa")
}],
"loop": true,
"name": &"Aim_Up_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_0g38x")
}],
"loop": true,
"name": &"Aim_Up_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq50y")
}],
"loop": true,
"name": &"Crouch_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tif4r")
}],
"loop": true,
"name": &"Crouch_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycb46")
}],
"loop": true,
"name": &"Idle_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwwpr")
}],
"loop": true,
"name": &"Idle_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4476i")
}],
"loop": true,
"name": &"Idle_stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vkel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdid2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnrfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv1rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as6ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvcfc")
}],
"loop": true,
"name": &"Morph_ball_L",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg3pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebdn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gscsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3lvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71kse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gims2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b0h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcsyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhy6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbam7")
}],
"loop": true,
"name": &"RL_Aim_Down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eniv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjnur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe1xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koe6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3qnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayvcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5o2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1asq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_immqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnpp2")
}],
"loop": true,
"name": &"RL_Aim_Up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk2g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri0vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1mhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeob8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnxg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pnb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7n4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khn3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkf5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0u56")
}],
"loop": true,
"name": &"RR_Aim_Down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31hds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwfi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyarl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3cpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w31a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5wvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67fxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_calca")
}],
"loop": true,
"name": &"RR_Aim_Up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dul5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eag0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7toqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atj1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo2kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22la4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1n6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia4cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4weg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1aw0")
}],
"loop": true,
"name": &"Run_L",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwnus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um8gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsdlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bdj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqhbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5s8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h048")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmg72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi17r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvex7")
}],
"loop": true,
"name": &"Run_R",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhccg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb5u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1slsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qvoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy7fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvlub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quiwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2vs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvlg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86343")
}],
"loop": true,
"name": &"SummerSault_Left",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_waetl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0m57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_238sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxfje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2r6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad2fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q8x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot8y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oblhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyaa2")
}],
"loop": true,
"name": &"SummerSault_Right",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r81r6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4wbq"]
size = Vector2(16, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpn0h"]
size = Vector2(17, 14)

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(127, 103)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_0wl42")

[node name="Standing_col" type="CollisionShape2D" parent="."]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_4f1cm")

[node name="Samus_anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -5)
sprite_frames = SubResource("SpriteFrames_w6h4c")

[node name="Jump_col" type="CollisionShape2D" parent="."]
position = Vector2(3, -7)
shape = SubResource("RectangleShape2D_h4wbq")
disabled = true

[node name="Check_landing" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
target_position = Vector2(0, 27)

[node name="Check_landing2" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(0, 27)

[node name="Morphball_col" type="CollisionShape2D" parent="."]
position = Vector2(3, 12)
shape = SubResource("RectangleShape2D_kpn0h")
disabled = true

[node name="Bullet_exit_pos" type="Marker2D" parent="."]
position = Vector2(15, 6)

[node name="HUD" parent="." instance=ExtResource("20_rilml")]

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
